--- a/index1.html
+++ b/index1.html
@@ -10,9 +10,12 @@
 <body>
 	<!---------Header Section--------->
 	<section id="header">
+
 		<div class="container text-center">
+
 		<div class="user-box">
-		<img src="Pictures/picture1.jpg">
+
+		<img src="picture2.jpg">
 		<h1>Mario De La Cruz</h1>
 		<p>Computer Science Student</p>
 			
@@ -61,7 +64,7 @@
 <div class="about container" id="about">
 <div class="row">
 <div class="col-md-6 text-center">
-<img src="Pictures/picture2.jpg" class="profile-img">
+<img src="picture2.jpg" class="profile-img">
 	
 </div>
 <div class="col-md-6">
@@ -75,14 +78,19 @@
 <div class="progress-bar" style="width: 80%;">80%</div>
 	
 </div>
+<p>C</p>
+<div class="progress">
+<div class="progress-bar" style="width: 65%;">65%</div>
+	
+</div>
 <p>C++</p>
 <div class="progress">
 <div class="progress-bar" style="width: 75%;">75%</div>
 	
 </div>
-<p>C</p>
+<p>C#</p>
 <div class="progress">
-<div class="progress-bar" style="width: 65%;">65%</div>
+<div class="progress-bar" style="width: 75%;">75%</div>
 	
 </div>
 <p>Web Design</p>
@@ -90,7 +98,21 @@
 <div class="progress-bar" style="width: 70%;">70%</div>
 	
 </div>
+<p>Ruby</p>
+<div class="progress">
+<div class="progress-bar" style="width: 70%;">70%</div>
 	
+</div>
+	<p>Ruby On Rails</p>
+<div class="progress">
+<div class="progress-bar" style="width: 70%;">70%</div>
+
+	
+</div>
+	<p>R</p>
+<div class="progress">
+<div class="progress-bar" style="width: 80%;">80%</div>
+</div>
 </div>
 	
 </div>
@@ -150,12 +172,13 @@
 	</ul>
 		
 	</div>
+	
 	<div class="col-md-6">
 	<h3 class="text-center">My Education</h3>
 	<ul class="timeline">
 	<li>
 		<h4><span>Currently Attending -</span> Bachelor of Computer Science</h4>
-		<p>I have been attending the University of Texas Rio Grande Valley since 2017 and I am currently a Junior. I intend to go for my masters when i am finished with my bachelors.
+		<p>I have been attending the University of Texas Rio Grande Valley since 2017 and I am currently a Senior. I intend to go for my masters when i am finished with my bachelors.
 		<br>
 		<b>University</b> - University of Texas Rio Grande Valley<br>
 		<b>Session</b> - 2017 - Now<br>
@@ -233,7 +256,7 @@
 	</div>
 	<div class="col-md-6">
 	<i class="fa fa-envelope"></i>
-	<p>dlcdrummer@gmail.com</p>
+	<p>mariodelacruzjr7@gmail.com</p>
 	</div>
 	
 
