--- a/index1.html
+++ b/index1.html
@@ -262,7 +262,7 @@
 
 		
 	</div>
-	<form method="get" action="Mario De La Cruz-Resume.docx">
+	<form method="get" action="MarioDeLaCruz-Resume.docx">
 	<button type="submit" class="btn btn-primary"><i class="fa fa-download"></i>Resume</button>
 	</form>
 		
